@@ -6,7 +6,7 @@ import java.text.ParseException;
 import java.util.*;
 
 import com.nimbusds.jose.util.json.JSONObjectUtils;
-import com.nimbusds.jwt.util.DateUtils;
+import com.nimbusds.jose.util.date.DateUtils;
 import net.jcip.annotations.Immutable;
 import net.minidev.json.JSONArray;
 import net.minidev.json.JSONObject;
