@@ -1,4 +1,0 @@
-/**
- * JSON Web Token (JWT) utilities.
- */
-package com.nimbusds.jwt.util;
